Added testing samples
- Added files vars.txt and output.txt to use with pytest
- When modifying KvalsNumpyMethod and KvalsBlockMethod, use broadcasting_test.py with pytest to verify that it works correctly.
- Code is ready for @eerovaher to investigate making the two Kvals functions not rely on loops.

--- a/DanielsTesting.ipynb
+++ b/DanielsTesting.ipynb
@@ -1064,6 +1064,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('vars.txt', 'rb') as f:\n",
+    "    var_load = pickle.loads(f.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pvals, rhatvals, vmin, dv, n, Nblock = var_load['pvals'], var_load['rhat'], var_load['vmin'], var_load['dv'], var_load['n'], var_load['Nblock']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "I = np.random.choice(np.arange(0,len(pvals)), 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1243679, 3), (1243679, 3), (3,), (3,), (3,), 5256543)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pvals.shape, rhatvals.shape, vmin.shape, dv.shape, n.shape, Nblock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variables = {'pvals' : pvals[I],\n",
+    "            'rhat' : rhatvals[I],\n",
+    "            'vmin' : vmin,\n",
+    "            'dv' : np.array([30,30,16]),\n",
+    "            'n' : np.array([10,10,10]),\n",
+    "            'Nblock' : 10}\n",
+    "\n",
+    "with open('vars.txt', 'wb') as f:\n",
+    "    pickle.dump(variables, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Deproject_v1_0 import KvalsBlockMethod, KvalsNumpyMethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kvals_block size:  8.0112e-05 GB\n",
+      "Available RAM:  533.520314368 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('vars.txt', 'rb') as f:\n",
+    "    var = pickle.loads(f.read())\n",
+    "\n",
+    "Kvals_numpy = KvalsNumpyMethod(var['pvals'], var['rhat'], var['vmin'], var['dv'], var['n'])\n",
+    "Kvals_block = KvalsBlockMethod(var['pvals'], var['rhat'], var['vmin'], var['dv'], var['n'], var['Nblock'])\n",
+    "\n",
+    "output = {'numpy' : Kvals_numpy,\n",
+    "          'block' : Kvals_block}\n",
+    "with open('output.txt', 'wb') as f:\n",
+    "    pickle.dump(output, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1086,7 +1197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
